--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         </div>
     </div>
-    <div class="usercard" id="usercard"></div>
+    <div class="example" id="example">example by HrDrone</div>
 
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
